Agregue detalles finales para fotos

--- a/almohadones.html
+++ b/almohadones.html
@@ -12,6 +12,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
       </style>
+      <link rel="icon" href="fotos/De todo un poco/favicon/favicon.ico">
     <title>Juana Home</title>
   </head>
 
@@ -66,7 +67,7 @@
 <section class="almohadones-2"> 
 
     <div class="card_almohadones">
-      <img class="photos" src="fotos/almohadones/almohadones/pecas.jpg" alt="pecas">
+      <img class="photos" srcset="fotos/almohadones/almohadones/pecas.jpg" alt="pecas">
           <p>Pecas</p>
     </div>
 
