--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
       </style>
-
+    <link rel="icon" href="fotos/De todo un poco/favicon/favicon.ico">
     <title>Juana Home</title>
   </head>
 
