--- a/detodounpoco.html
+++ b/detodounpoco.html
@@ -12,6 +12,10 @@
       <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
         </style>
+         <style>
+          @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
+          </style>
+          <link rel="icon" href="fotos/De todo un poco/favicon/favicon.ico">
 
     <title>Juana Home</title>
   </head>
@@ -53,11 +57,11 @@
         </div>
   </nav>
  
-<!--
+
     <div class="main__head">
         <h1 class="titulo">Juana Home</h1>
     </div>
--->
+
 </header>
 
 
