--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
 
     <header class="header__main " id="wallpaper_contact">
 
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light  navbar_new">
            
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
