--- a/detodounpoco.html
+++ b/detodounpoco.html
@@ -26,7 +26,7 @@
   <header class="header__main back">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light  navbar_new">
            
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
